color correction for nav link

--- a/index.html
+++ b/index.html
@@ -175,20 +175,20 @@
             </div>
             <div>
                 <ul>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">Home</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">About Us</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">Blog</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">FAQ</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">COntact Us</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Home</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">About Us</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Blog</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">FAQ</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">COntact Us</a></li>
                 </ul>
             </div>
             <div>
                 <ul>
-                    <li  class="nav-footer"><a href="#" class="nav-link inter-normal">Features</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">Pricing</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">Privacy Policy</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">Terms of Service</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link inter-normal">Help Center</a></li>
+                    <li  class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Features</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Pricing</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Privacy Policy</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Terms of Service</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Help Center</a></li>
                 </ul>
             </div>
             <div>
