--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <!--plant lover section-->
         <section class="plant-lover-section display-flex">
             <div class="lover-description-img">
-                <img src="assets/flower-store.png" alt="" width="540px" height="597px">
-                <!-- <img src="assets/trusted-badge.png" alt=""> -->
+                <img src="assets/flower-store.png" alt="cutting flower" width="540px" height="597px">
+                <img class="seller-badge" src="assets/trusted-badge.png" alt="">
             </div>
             <div class="lover-description">
                 <h2 class="lover-h2 noto-serif-normal">Flower & Plants Lover</h2>
