deals section added

--- a/index.html
+++ b/index.html
@@ -56,49 +56,49 @@
                     <img src="assets/sample-flower-image.png" alt="flower1">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower2">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower3">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower4">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower5">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower6">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower7">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
                 <div class="cart">
                     <img src="assets/sample-flower-image.png" alt="flower8">
                     <h3 class="p-text cart-title">lilly Blossom</h3>
                     <p class="price">20 USD</p>
-                    <button class="cart-btn"><a href="">ADD TO CART</a></button>
+                    <button class="cart-btn"><a href="#">ADD TO CART</a></button>
                 </div>
             </div>
         </section>
@@ -129,19 +129,24 @@
             </div>
 
             <div class="deals-image">
-
-                <div class="discount1">
-                    <h2 class="discount-text noto-serif-normal">60% Off | Bloom Plant</h2>
-                    <p class="discount-p inter-normal">Shop Now</p>
+                <div class="img1">
+                    <div class="discount">
+                        <h2 class="discount-text noto-serif-normal">60% Off | Bloom Plant</h2>
+                        <a class="discount-p inter-normal" href="#">Shop Now</a>
+                    </div>
                 </div>
-                <div class="discount2">
-                    <h2 class="discount-text noto-serif-normal">30% Off | Ana  Plant</h2>
-                    <p class="discount-p inter-normal">Shop Now</p>
+                <div class="img2">
+                    <div class="discount">
+                        <h2 class="discount-text noto-serif-normal">30% Off | Ana  Plant</h2>
+                        <a class="discount-p inter-normal" href="#">Shop Now</a>
+                    </div>
                 </div>
-                <div class="discount3">
-                    <h2 class="discount-text3 noto-serif-normal">25% Off | Zabo Plant</h2>
-                    <p class="discount-p3 inter-normal">Shop Now</p>
-                </div>
+                <div class="img3">   
+                    <div class="discount">
+                        <h2 class="discount-text3 noto-serif-normal">25% Off | Zabo Plant</h2>
+                        <a class="discount-p3 inter-normal" href="#">Shop Now</a>
+                    </div>
+                </div> 
 
 
             </div>
