mobile responsive added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/9d83288b53.js" crossorigin="anonymous"></script>
 </head>
 <body >
-   <header>
+   <header class="res-header">
 
     <nav class="nav-header display-flex">
         <div class="logo-header">
@@ -19,14 +19,14 @@
         </div>
         <div class="nav-bar inter-normal">
             <ul class="menu-bar display-flex">
-                <li class="nav-item"><a class="nav-link dark-color" href="#"><b>Home</b></a></li>
-                <li class="nav-item"><a class="nav-link ash-color" href="#">Shop</a></li>
-                <li class="nav-item"><a class="nav-link  ash-color" href="#">About Us</a></li>
+                <li class="nav-item res-header-nav"><a class="nav-link dark-color" href="#"><b>Home</b></a></li>
+                <li class="nav-item res-header-nav"><a class="nav-link ash-color" href="#">Shop</a></li>
+                <li class="nav-item res-header-nav"><a class="nav-link  ash-color" href="#">About Us</a></li>
                 <li class="nav-item"><a class="nav-link black-color" href="#"><i class="fa-solid fa-cart-shopping"></i> Cart($56)</a></li>
             </ul>
         </div>
     </nav>
-    <section class="header-banner display-flex">
+    <section class="header-banner display-flex res-banner">
 
         <div>
             <h1 class="h1-header-text noto-serif-normal">ALWAYS <span class="orange-color">FRESH FLOWERS</span></h1>
@@ -106,7 +106,7 @@
         <!--plant lover section-->
         <section class="plant-lover-section display-flex">
             <div class="lover-description-img">
-                <img src="assets/flower-store.png" alt="cutting flower" width="540px" height="597px">
+                <img class="lover-img-sec" src="assets/flower-store.png" alt="cutting flower">
                 <img class="seller-badge" src="assets/trusted-badge.png" alt="">
             </div>
             <div class="lover-description">
