--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </nav>
     <section class="header-banner display-flex res-banner">
 
-        <div>
+        <div class="res-banner-text">
             <h1 class="h1-header-text noto-serif-normal">ALWAYS <span class="orange-color">FRESH FLOWERS</span></h1>
-            <p class="p-text light-dark-color inter-normal">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.  </p>
+            <p class="p-text light-dark-color inter-normal res-text-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.  </p>
         </div>
         <img class="banner-img" src="assets/hero-flower.png" alt="flower image">
 
@@ -46,8 +46,8 @@
         <section class="cart-section">
             
             <div class="cart-header">
-                <h1 class="noto-serif-normal"><span class="orange-color">Our</span> Plants</h1>
-            <p class="p-text light-dark-color inter-normal">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <h1 class="cart-title-header noto-serif-normal"><span class="orange-color">Our</span> Plants</h1>
+            <p class="p-text light-dark-color inter-normal res-text-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
             </div>
 
@@ -110,8 +110,8 @@
                 <img class="seller-badge" src="assets/trusted-badge.png" alt="">
             </div>
             <div class="lover-description">
-                <h2 class="lover-h2 noto-serif-normal">Flower & Plants Lover</h2>
-                <ul class="inter-normal p-text light-dark-color">
+                <h2 class="lover-h2 noto-serif-normal res-text-h2">Flower & Plants Lover</h2>
+                <ul class="inter-normal p-text light-dark-color  res-text-p">
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
@@ -124,8 +124,8 @@
         <section class="deals-section">
                 
             <div class="deals-text">
-                <h2 class="deals-h2 noto-serif-normal"><span class="orange-color">Latest</span>  Deals</h2>
-                <p class="inter-normal p-text light-dark-color">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <h2 class="deals-h2 noto-serif-normal res-text-h2"><span class="orange-color">Latest</span>  Deals</h2>
+                <p class="inter-normal p-text light-dark-color res-text-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
 
             <div class="deals-image">
@@ -170,7 +170,7 @@
         <div class="footer-column display-flex">
             <div class="footer-logo">
                 <img src="assets/logo.png" alt="logo">
-                <p class="light-dark-color inter-normal p-text">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+                <p class="light-dark-color inter-normal p-text res-bottom-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
             </div>
             <div class="footer-column-nav">
                 <ul class="footer-menu">
@@ -178,7 +178,7 @@
                     <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">About Us</a></li>
                     <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Blog</a></li>
                     <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">FAQ</a></li>
-                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">COntact Us</a></li>
+                    <li class="nav-footer"><a href="#" class="nav-link-footer inter-normal">Contact Us</a></li>
                 </ul>
             </div>
             <div class="footer-column-nav">
