deals section margin reworked

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h2 class="deals-h2 noto-serif-normal res-text-h2"><span class="orange-color">Latest</span>  Deals</h2>
                 <p class="inter-normal p-text light-dark-color res-text-p">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
-
+            <div class="res-margin">
             <div class="deals-image">
                 <div class="img1">
                     <div class="discount">
@@ -150,7 +150,7 @@
 
 
             </div>
-
+            </div>
         </section>
     </section>
 
